# mosh

./: .gitignore  .gitmodules  .prettierignore  AGENTS.md  BUGS-TODO.md  CHANGELOG.md  CODE_SIGNING.md  CONTEXT.md  README.md  desktop-private-dm.brainstorm.md  desktop-private-dm.plan.md  dm-direct-path.plan.md  dm-ready-presence.brainstorm.md  dm-ready-presence.plan.md  index.html  invite-rehydrate.brainstorm.md  invite-rehydrate.plan.md  moss.config.json  package-lock.json  package.json  runtime-private-dm.brainstorm.md  runtime-private-dm.plan.md  rust-toolchain.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: Architecture.md  UX_UI_FIX_PLAN.md
docs/ADR/: 0001-openmls-private-dm-adapter.md  0002-moss-dynamic-link-and-release-pin.md  0003-native-secure-storage.md  0005-roster-derived-commit-authority.md  (+4 more)
scripts/: build-moss-runtime.mjs  moss-prepare.mjs  moss-runtime-plan.mjs  moss-runtime-plan.test.mjs  moss-update.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.config/: nextest.toml
src-tauri/capabilities/: default.json
src-tauri/src/: callback_state.rs  chat_protocol.rs  commands.rs  ffi.rs  lib.rs  main.rs  models.rs  runtime_settings.rs  snapshot_view.rs  state.rs  storage.rs
src-tauri/src/adapters/: attachment_crypto.rs  attachment_runtime.rs  attachment_store.rs  channel_runtime.rs  ciphertext_store.rs  commit_sequencer.rs  message_id.rs  mls_crypto.rs  mls_storage.rs  mod.rs  moss_ffi.rs  moss_runtime.rs  network_inventory.rs  openmls_crypto.rs  org_envelope.rs  org_roster.rs  org_runtime.rs  org_runtime_tests.rs  org_signing.rs  outbound_delivery.rs  persistence.rs  private_dm_runtime.rs  private_group_runtime.rs  secure_storage.rs  voice_call_runtime.rs
src-tauri/src/adapters/private_dm_runtime/: contracts.rs  invite.rs  mls_session.rs  relay.rs  wire.rs
src-tauri/src/callback_state/: tests.rs
src-tauri/src/storage/: tests.rs
(+267 files in other folders)
