[package]
name = "mosh"
version = "0.1.1"
description = "MOSH desktop chat client powered by the MOSS runtime"
edition = "2021"

[lib]
name = "mosh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
libloading = "0.8.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.0", features = ["tray-icon"] }
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2.3.3"
