[package]
name = "mosh"
version = "0.2.3"
description = "Desktop-first decentralized messenger"
authors = ["Mosh contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mosh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
libloading = "0.9"
keyring = "4.0"
keyring-core = "1.0"
openmls_rust_crypto = "0.5.1"
openmls_basic_credential = "0.5.0"
openmls_traits = "0.5.0"
openmls = { version = "0.8.1", features = ["openmls_rust_crypto"] }
url = '2'
aes-gcm = "0.10"
redb = "2"
sha2 = "0.10"
rand = "0.8"
mime_guess = "2"
if-addrs = "0.15.0"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_NetworkManagement_Ndis"] }

